Modifying the column catgory from String to Text[] in the table